@@ -2,11 +2,14 @@
 Basic ToDo app created with JavaFX and MySQL <br />
 Multiple users sign up, log in
 ## Requirements
-Installed JDK with Java system environment variables
+Installed JDK 19 with Java system environment variables
 ### Start
 ```
 cd ../ToDoAppJavaFX
-java -jar ToDoAppJavaFX.jar
+mvn clean package
+java --module-path "C:\infa\SDK\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml -jar ToDoAppJavaFX-1.0-SNAPSHOT.jar
+
 ```
+
 
 
